# niku

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COPYRIGHT.md  LICENSE  README.md  conanfile.py  iwyu.imp  suppression.lsan
demo/galileo/: CMakeLists.txt  README.md
demo/galileo/assets/: world.blend  world.glb
demo/galileo/scripts/: spawner.as  sphere.as  test.as
demo/galileo/shaders/: debug.frag  debug.vert  deferred.frag  frame_info.glsl  fullscreen.vert  fxaa.comp  gbuffer.frag  gbuffer.vert  materials.glsl  math_constants.glsl  navmesh_debug.frag  navmesh_debug.vert  physics_debug_line.frag  physics_debug_line.vert  postprocess.comp  render_graph.glsl  scene_graph.glsl  tone_mapping.comp
demo/galileo/src/: application.cpp  application.hpp  batch_renderer.cpp  batch_renderer.hpp  camera_controller.cpp  camera_controller.hpp  character.cpp  character.hpp  character_contact_listener.cpp  character_contact_listener.hpp  config.hpp  deferred_shader.cpp  deferred_shader.hpp  follow_camera_controller.cpp  follow_camera_controller.hpp  frame_info.cpp  frame_info.hpp  galileo.m.cpp  gbuffer.cpp  gbuffer.hpp  gbuffer_shader.cpp  gbuffer_shader.hpp  materials.cpp  materials.hpp  navmesh.cpp  navmesh.hpp  navmesh_debug.cpp  navmesh_debug.hpp  physics_debug.cpp  physics_debug.hpp  physics_engine.cpp  physics_engine.hpp  postprocess_shader.cpp  postprocess_shader.hpp  render_graph.cpp  render_graph.hpp  scene_graph.cpp  scene_graph.hpp  scripting.cpp  scripting.hpp  (+6 more)
demo/gltfviewer/: CMakeLists.txt  README.md
demo/gltfviewer/shaders/: brdf.frag  color_conversion.glsl  cubemap.vert  environment.glsl  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  fullscreen.vert  ibl_debug.frag  irradiance.frag  oit_composition.frag  pbr.frag  pbr.vert  pbrNeutral.glsl  postprocess.comp  postprocess.frag  postprocess.vert  prefilter.frag  pyramid_downsample.comp  pyramid_upsample.comp  resolve.comp  scene_graph.glsl  skybox.frag  skybox.vert  weighted_blend.comp
demo/gltfviewer/src/: application.cpp  application.hpp  camera_controller.cpp  camera_controller.hpp  config.hpp  depth_pass_shader.cpp  depth_pass_shader.hpp  environment.cpp  environment.hpp  gltfviewer.m.cpp  materials.cpp  materials.hpp  model_selector.cpp  model_selector.hpp  pbr_renderer.cpp  pbr_renderer.hpp  pbr_shader.cpp  pbr_shader.hpp  postprocess_shader.cpp  postprocess_shader.hpp  pyramid_blur.cpp  pyramid_blur.hpp  render_graph.cpp  render_graph.hpp  resolve_shader.cpp  resolve_shader.hpp  scene_graph.cpp  scene_graph.hpp  shadow_map.cpp  shadow_map.hpp  shadow_map_shader.cpp  shadow_map_shader.hpp  skybox.cpp  skybox.hpp  weighted_blend_shader.cpp  weighted_blend_shader.hpp  weighted_oit_shader.cpp  weighted_oit_shader.hpp
demo/heatx/: CMakeLists.txt  README.md
demo/heatx/shaders/: anyhit.rahit  closesthit.rchit  fxaa.comp  geometry.glsl  materials.glsl  raygen.rgen  shadow.rmiss
demo/heatx/src/: application.cpp  application.hpp  camera_controller.cpp  camera_controller.hpp  config.hpp  heatx.m.cpp  materials.cpp  materials.hpp  postprocess_shader.cpp  postprocess_shader.hpp
demo/reshed/: CMakeLists.txt  README.md
demo/reshed/shaders/: text.frag  text.tesc  text.tese  text.vert
demo/reshed/src/: application.cpp  application.hpp  config.hpp  editor_window.cpp  editor_window.hpp  reshed.m.cpp  text_buffer.cpp  text_buffer.hpp  text_editor.cpp  text_editor.hpp  window.cpp  window.hpp
src/cppext/: CMakeLists.txt
src/cppext/include/: cppext_attribute.hpp  cppext_container.hpp  cppext_cycled_buffer.hpp  cppext_hash.hpp  cppext_hash_adapter.hpp  cppext_memory.hpp  cppext_numeric.hpp  cppext_overloaded.hpp  cppext_pragma_warning.hpp  cppext_read_file.hpp  cppext_thread_pool.hpp
src/cppext/src/: cppext_read_file.cpp  cppext_thread_pool.cpp
src/cppext/test/: cppext_cycled_buffer.t.cpp  cppext_hash.t.cpp  cppext_hash_adapter.t.cpp  cppext_numeric.t.cpp  cppext_thread_pool.t.cpp
src/editor/: CMakeLists.txt
src/editor/shaders/: grid.frag  grid.vert
src/editor/src/: camera_controller.cpp  camera_controller.hpp  config.hpp  editor.m.cpp  editor_application.cpp  editor_application.hpp  grid_shader.cpp  grid_shader.hpp  material_manager.cpp  material_manager.hpp
src/ngnast/: CMakeLists.txt
src/ngnast/include/: ngnast_error.hpp  ngnast_gltf_loader.hpp  ngnast_gpu_transfer.hpp  ngnast_mesh_transform.hpp  ngnast_scene_model.hpp
src/ngnast/src/: ngnast_error.cpp  ngnast_gltf_fastgltf_adapter.cpp  ngnast_gltf_fastgltf_adapter.hpp  ngnast_gltf_loader.cpp  ngnast_gpu_transfer.cpp  ngnast_mesh_transform.cpp  ngnast_scene_model.cpp
src/ngngfx/: CMakeLists.txt
src/ngngfx/include/: ngngfx_aircraft_camera.hpp  ngngfx_camera.hpp  ngngfx_fixed_point_camera.hpp  ngngfx_gbuffer.hpp  ngngfx_orthographic_projection.hpp  ngngfx_perspective_camera.hpp  ngngfx_perspective_projection.hpp  ngngfx_projection.hpp
src/ngngfx/src/: ngngfx_aircraft_camera.cpp  ngngfx_camera.cpp  ngngfx_fixed_point_camera.cpp  ngngfx_gbuffer.cpp  ngngfx_orthographic_projection.cpp  ngngfx_perspective_camera.cpp  ngngfx_perspective_projection.cpp  ngngfx_projection.cpp
src/ngnphy/: CMakeLists.txt
src/ngnphy/include/: ngnphy_coordinate_system.hpp  ngnphy_jolt.hpp  ngnphy_jolt_adapter.hpp  ngnphy_jolt_geometry.hpp  ngnphy_jolt_job_system.hpp
src/ngnphy/src/: ngnphy_jolt_adapter.cpp  ngnphy_jolt_job_system.cpp
src/ngnscr/: CMakeLists.txt
src/ngnscr/include/: ngnscr_script_compiler.hpp  ngnscr_scripting_engine.hpp  ngnscr_types.hpp
src/ngnscr/src/: ngnscr_script_compiler.cpp  ngnscr_scripting_engine.cpp  ngnscr_types.cpp
src/ngntxt/: CMakeLists.txt
src/ngntxt/include/: ngntxt_font_bitmap.hpp  ngntxt_font_face.hpp  ngntxt_shaping.hpp  ngntxt_syntax.hpp
src/ngntxt/src/: ngntxt_font_bitmap.cpp  ngntxt_font_face.cpp  ngntxt_shaping.cpp  ngntxt_syntax.cpp
src/ngnwsi/: CMakeLists.txt
src/ngnwsi/include/: ngnwsi_application.hpp  ngnwsi_fixed_timestep.hpp  (+6 more)
src/niku/: CMakeLists.txt
src/vkglsl/: CMakeLists.txt
src/vkgltf/: CMakeLists.txt
src/vkrndr/: CMakeLists.txt
(+489 files in other folders)
